[gd_scene load_steps=4 format=3 uid="uid://n486i6qibn2m"]

[ext_resource type="Script" uid="uid://cs4catt2mjyy2" path="res://Scripts/Button.gd" id="1_a506e"]
[ext_resource type="Texture2D" uid="uid://clk6u2nwcg58s" path="res://Assets/sprites.png" id="2_a506e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gf234"]
size = Vector2(16, 10)

[node name="Button" type="Area2D" groups=["buttons"]]
collision_layer = 7
collision_mask = 7
script = ExtResource("1_a506e")

[node name="DisabledRedButton" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_a506e")
region_enabled = true
region_rect = Rect2(32, 96, 16, 16)

[node name="DisabledGreenButton" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_a506e")
region_enabled = true
region_rect = Rect2(32, 144, 16, 16)

[node name="DisabledYellowButton" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_a506e")
region_enabled = true
region_rect = Rect2(32, 192, 16, 16)

[node name="EnabledRedButton" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_a506e")
region_enabled = true
region_rect = Rect2(48, 96, 16, 16)

[node name="EnabledGreenButton" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_a506e")
region_enabled = true
region_rect = Rect2(48, 144, 16, 16)

[node name="EnabledYellowButton" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_a506e")
region_enabled = true
region_rect = Rect2(48, 192, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_gf234")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
